--- a/blueprints/automation/EPMatt/addon_update_notification.yaml
+++ b/blueprints/automation/EPMatt/addon_update_notification.yaml
@@ -1,28 +1,18 @@
+# Blueprint metadata
 blueprint:
   name: Send a mobile notification when add-on update is available
-  description: '# Send a mobile notification when add-on update is available
+  description: |
+    # Send a mobile notification when add-on update is available
 
-
-    Send a notification to the provided mobile devices whenever an update for the
-    given Home Assistant add-on is available.
-
-    Supports full notification customization, notification groups, auto-dismissal
-    when the add-on is updated and button for starting the update directly from your
-    notification tray,
-
+    Send a notification to the provided mobile devices whenever an update for the given Home Assistant add-on is available.
+    Supports full notification customization, notification groups, auto-dismissal when the add-on is updated and button for starting the update directly from your notification tray,
     with optional notification after the update completed succesfully.
-
 
     📕 Full documentation regarding this blueprint is available [here](https://epmatt.github.io/awesome-ha-blueprints/docs/blueprints/automation/addon_update_notification).
 
-
-    🚀 This blueprint is part of the **[Awesome HA Blueprints](https://epmatt.github.io/awesome-ha-blueprints)
-    project**.
-
+    🚀 This blueprint is part of the **[Awesome HA Blueprints](https://epmatt.github.io/awesome-ha-blueprints) project**.
 
     ℹ️ Version 2021.10.26
-
-    '
   source_url: https://github.com/EPMatt/awesome-ha-blueprints/blob/main/blueprints/automation/addon_update_notification/addon_update_notification.yaml
   domain: automation
   input:
@@ -30,12 +20,12 @@ blueprint:
       name: (Required) Add-on
       description: The add-on to monitor for updates.
       selector:
-        addon: {}
+        addon:
     addon_name:
       name: (Required) Add-on name
       description: The add-on name to be displayed in notifications.
       selector:
-        text: {}
+        text:
     addon_sensor_version:
       name: (Required) Add-on version sensor
       description: The add-on current version sensor, exposed by the Supervisor.
@@ -59,169 +49,182 @@ blueprint:
           integration: hassio
     mobile_notify_service:
       name: (Required) Mobile devices notification service
-      description: The notification service for mobile devices (eg. service.mobile_app_<your_device_id_here>).
+      description: >-
+        The notification service for mobile devices (eg. service.mobile_app_<your_device_id_here>).
         You can provide both a notify group or a single notify device here.
       selector:
-        text: {}
+        text:
     notification_title:
       name: (Optional) Notification title
-      description: Title for the update notification. You can use {{ version }}, {{
-        newest_version }}, and {{ addon_name }} templates to include add-on current
-        version, newest version and name respectively.
+      description: >-
+        Title for the update notification.
+        You can use {{ version }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on current version, newest version and name respectively.
       default: '{{ addon_name }} add-on : Update available'
       selector:
-        text: {}
+        text:
     notification_message:
       name: (Optional) Notification message
-      description: Message for the update notification. You can use {{ version }},
-        {{ newest_version }}, and {{ addon_name }} templates to include add-on current
-        version, newest version and name respectively.
-      default: Update available for {{ addon_name }} add-on ({{ version }} -> {{ newest_version
-        }})
+      description: >-
+        Message for the update notification.
+        You can use {{ version }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on current version, newest version and name respectively.
+      default: Update available for {{ addon_name }} add-on ({{ version }} -> {{ newest_version }})
       selector:
         text:
           multiline: true
     tap_action:
       name: (Optional) Tap action
-      description: URL you will navigate to when tapping on the notification. Default
-        to the add-on info page.
+      description: URL you will navigate to when tapping on the notification. Default to the add-on info page.
       default: /hassio/addon/{{ addon }}/info
       selector:
-        text: {}
+        text:
     notification_color:
       name: (Optional) (Android only) Notification color
-      description: Color for the notifications. You can both type a friendly color
-        name or an hex value.
+      description: Color for the notifications. You can both type a friendly color name or an hex value.
       default: ''
       selector:
-        text: {}
+        text:
     notification_channel:
       name: (Optional) (Android only) Notification channel
-      description: Android notification channel. Allows to group notifications to
+      description: >-
+        Android notification channel. Allows to group notifications to
         then apply custom settings for sound, vibration, etc. Leave blank if you do
         not want to use this feature.
       default: ''
       selector:
-        text: {}
+        text:
     notification_channel_importance:
       name: (Optional) (Android only) Notification Channel importance
-      description: Android notification channel importance. Allows to define different
-        priority levels for your notifications.
+      description: Android notification channel importance. Allows to define different priority levels for your notifications.
       default: default
       selector:
         select:
           options:
-          - default
-          - min
-          - low
-          - high
-          - max
+            - default
+            - min
+            - low
+            - high
+            - max
     notification_group:
       name: (Optional) Notification group
-      description: Notification group for the notifications sent with this automation.
+      description: >-
+        Notification group for the notifications sent with this automation.
         Use this to group notifications in the notification tray. Leave blank if you
         do not want to use this feature.
       default: ''
       selector:
-        text: {}
+        text:
     update_button:
       name: (Optional) Notification Update Button
       description: Add a button to the notification for updating the add-on.
       default: true
       selector:
-        boolean: {}
+        boolean:
     update_success_notification:
       name: (Optional) Update success notification
-      description: Send a notification after the add-on update triggered by the update
-        button succeed. The notification will use the same settings for group, channel,
-        importance and color from the update available notification.
+      description: >-
+        Send a notification after the add-on update triggered by the update button succeed.
+        The notification will use the same settings for group, channel, importance and color from the update available notification.
       default: true
       selector:
-        boolean: {}
+        boolean:
     update_success_notification_title:
       name: (Optional) Update success notification title
-      description: Title for the update success notification. You can use {{ version
-        }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on
-        current version, newest version and name respectively.
+      description: >-
+        Title for the update success notification.
+        You can use {{ version }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on current version, newest version and name respectively.
       default: '{{ addon_name }} add-on: Update completed'
       selector:
-        text: {}
+        text:
     update_success_notification_message:
       name: (Optional) Update success notification message
-      description: Message for the update success notification. You can use {{ version
-        }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on
-        current version, newest version and name respectively.
-      default: Add-on {{ addon_name }} was succesfully updated to {{ newest_version
-        }}
+      description: >-
+        Message for the update success notification.
+        You can use {{ version }}, {{ newest_version }}, and {{ addon_name }} templates to include add-on current version, newest version and name respectively.
+      default: Add-on {{ addon_name }} was succesfully updated to {{ newest_version }}
       selector:
         text:
           multiline: true
+# Automation schema
 variables:
-  notification_title: !input 'notification_title'
-  notification_message: !input 'notification_message'
-  addon: !input 'addon'
-  addon_name: !input 'addon_name'
-  addon_sensor_version: !input 'addon_sensor_version'
-  addon_sensor_newest_version: !input 'addon_sensor_newest_version'
-  addon_sensor_update_available: !input 'addon_sensor_update_available'
-  update_button: !input 'update_button'
-  update_success_notification: !input 'update_success_notification'
+  # convert blueprint inputs to variables to be used in templates
+  notification_title: !input notification_title
+  notification_message: !input notification_message
+  addon: !input addon
+  addon_name: !input addon_name
+  addon_sensor_version: !input addon_sensor_version
+  addon_sensor_newest_version: !input addon_sensor_newest_version
+  addon_sensor_update_available: !input addon_sensor_update_available
+  update_button: !input update_button
+  update_success_notification: !input update_success_notification
 trigger_variables:
-  trigger_addon: !input 'addon'
+  trigger_addon: !input addon
+
 mode: single
 max_exceeded: silent
 trigger:
-- platform: state
-  entity_id: !input 'addon_sensor_update_available'
-- platform: event
-  event_type: mobile_app_notification_action
-  event_data:
-    tag: ahb_addon_notification_{{ trigger_addon }}
-    action: ahb_addon_update_{{ trigger_addon }}
+  # trigger when the update status changes
+  - platform: state
+    entity_id: !input addon_sensor_update_available
+  # trigger when a user presses on the update button in the notification
+  - platform: event
+    event_type: mobile_app_notification_action
+    event_data:
+      tag: ahb_addon_notification_{{ trigger_addon }}
+      action: ahb_addon_update_{{ trigger_addon }}
 action:
-- variables:
-    version: '{{ states(addon_sensor_version) }}'
-    newest_version: '{{ states(addon_sensor_newest_version) }}'
-- choose:
-  - conditions: '{{ "event" in trigger and trigger.event.event_type == "mobile_app_notification_action"
-      }}'
-    sequence:
-    - service: hassio.addon_update
-      data:
-        addon: !input 'addon'
-    - condition: template
-      value_template: '{{ update_success_notification }}'
-    - service: !input 'mobile_notify_service'
-      data:
-        title: !input 'update_success_notification_title'
-        message: !input 'update_success_notification_message'
+  - variables:
+      version: '{{ states(addon_sensor_version) }}'
+      newest_version: '{{ states(addon_sensor_newest_version) }}'
+  - choose:
+      # if an update was requested by the user clicking on the update button in the notification
+      - conditions: '{{ "event" in trigger and trigger.event.event_type == "mobile_app_notification_action" }}'
+        sequence:
+          # update the addon
+          - service: hassio.addon_update
+            data:
+              addon: !input addon
+          # if user opted in for notification after successful update, send it to the mobile device
+          - condition: template
+            value_template: '{{ update_success_notification }}'
+          - service: !input mobile_notify_service
+            data:
+              title: !input update_success_notification_title
+              message: !input update_success_notification_message
+              data:
+                # iOS URL
+                url: !input tap_action
+                # Android URL
+                clickAction: !input tap_action
+                tag: 'ahb_addon_notification_{{ addon }}'
+                # notification group
+                group: !input notification_group
+                channel: !input notification_channel
+                importance: !input notification_channel_importance
+                color: !input notification_color
+      # if an update is available send a notification
+      - conditions: '{{ trigger.to_state.state == "on" }}'
+        sequence:
+          - service: !input mobile_notify_service
+            data:
+              title: !input notification_title
+              message: !input notification_message
+              data:
+                # iOS URL
+                url: !input tap_action
+                # Android URL
+                clickAction: !input tap_action
+                tag: 'ahb_addon_notification_{{ addon }}'
+                # notification group
+                group: !input notification_group
+                channel: !input notification_channel
+                importance: !input notification_channel_importance
+                color: !input notification_color
+                actions: >-
+                  {% set actions=[{"action": "ahb_addon_update_"+addon, "title": "Update"}] %} {{ actions if update_button else [] }}
+    # if no update is available dismiss any previous update notification
+    default:
+      - service: !input mobile_notify_service
         data:
-          url: !input 'tap_action'
-          clickAction: !input 'tap_action'
-          tag: ahb_addon_notification_{{ addon }}
-          group: !input 'notification_group'
-          channel: !input 'notification_channel'
-          importance: !input 'notification_channel_importance'
-          color: !input 'notification_color'
-  - conditions: '{{ trigger.to_state.state == "on" }}'
-    sequence:
-    - service: !input 'mobile_notify_service'
-      data:
-        title: !input 'notification_title'
-        message: !input 'notification_message'
-        data:
-          url: !input 'tap_action'
-          clickAction: !input 'tap_action'
-          tag: ahb_addon_notification_{{ addon }}
-          group: !input 'notification_group'
-          channel: !input 'notification_channel'
-          importance: !input 'notification_channel_importance'
-          color: !input 'notification_color'
-          actions: '{% set actions=[{"action": "ahb_addon_update_"+addon, "title":
-            "Update"}] %} {{ actions if update_button else [] }}'
-  default:
-  - service: !input 'mobile_notify_service'
-    data:
-      message: clear_notification
-      data:
-        tag: ahb_update_notification_{{ addon }}
+          message: 'clear_notification'
+          data:
+            tag: 'ahb_update_notification_{{ addon }}'
