--- a/blueprints/automation/Mr-Groch/offline-notification-for-sensors-with-last_seen.yaml
+++ b/blueprints/automation/Mr-Groch/offline-notification-for-sensors-with-last_seen.yaml
@@ -1,8 +1,7 @@
 blueprint:
   name: Offline detection for Z2M devices with last_seen
-  description: Regularly test all sensors with 'last_seen' in name and 'timestamp'
-    device_class ('last seen' Z2M sensors) to detect offline and if so execute an
-    action.
+  description: Regularly test all sensors with 'last_seen' in name and 'timestamp' device_class
+    ('last seen' Z2M sensors) to detect offline and if so execute an action.
   domain: automation
   input:
     hours:
@@ -35,9 +34,9 @@ blueprint:
           step: 1.0
     exclude:
       name: Excluded Sensors
-      description: '''last seen'' sensors (from devices that you want to exclude)
-        to exclude from detection. Only entities with ''last seen'' in name and ''timestamp''
-        in device_class are supported, devices must be expanded!'
+      description: "'last seen' sensors (from devices that you want to exclude) to
+        exclude from detection. Only entities with 'last seen' in name and 'timestamp'
+        in device_class are supported, devices must be expanded!"
       default:
         entity_id: []
       selector:
@@ -52,24 +51,22 @@ blueprint:
         action: {}
   source_url: https://gist.github.com/Mr-Groch/bf073b142b507e3b6f8154223f81803b
 variables:
-  day: !input day
-  hours: !input hours
-  exclude: !input exclude
-  sensors: '{% set result = namespace(sensors=[]) %} {% for state in states.sensor
-    | rejectattr(''attributes.device_class'', ''undefined'') | selectattr(''attributes.device_class'',
-    ''=='', ''timestamp'') %}   {% if ''last_seen'' in state.entity_id and not state.entity_id
-    in exclude.entity_id and (states(state.entity_id) == ''unavailable'' or ((as_timestamp(now())
-    - as_timestamp(states(state.entity_id))) > ((hours | int) * 60 * 60))) %}     {%
-    set result.sensors = result.sensors + [state.name | regex_replace(find='' last
-    seen'', replace='''') ~ '' ('' ~ relative_time(strptime(states(state.entity_id),
-    ''%Y-%m-%dT%H:%M:%S%z'', ''unavailable'')) ~ '')''] %}   {% endif %} {% endfor
-    %} {{ result.sensors | join('', '') }}'
+  day: !input 'day'
+  hours: !input 'hours'
+  exclude: !input 'exclude'
+  sensors: "{% set result = namespace(sensors=[]) %}\
+    \ {% for state in states.sensor | rejectattr('attributes.device_class', 'undefined') | selectattr('attributes.device_class', '==', 'timestamp') %}\
+    \   {% if 'last_seen' in state.entity_id and not state.entity_id in exclude.entity_id and (states(state.entity_id) == 'unavailable' or ((as_timestamp(now()) - as_timestamp(states(state.entity_id))) > ((hours | int) * 60 * 60))) %}\
+    \     {% set result.sensors = result.sensors + [state.name | regex_replace(find=' last seen', replace='') ~ ' (' ~ relative_time(strptime(states(state.entity_id), '%Y-%m-%dT%H:%M:%S%z', 'unavailable')) ~ ')'] %}\
+    \   {% endif %}\
+    \ {% endfor %}\
+    \ {{ result.sensors | join(', ') }}"
 trigger:
 - platform: time
-  at: !input time
+  at: !input 'time'
 condition:
 - '{{ sensors != '''' and (day | int == 0 or day | int == now().isoweekday()) }}'
 action:
 - choose: []
-  default: !input actions
+  default: !input 'actions'
 mode: single
