--- a/blueprints/automation/thomasmauerer/restore_samba_backup_sensor.yaml
+++ b/blueprints/automation/thomasmauerer/restore_samba_backup_sensor.yaml
@@ -1,4 +1,5 @@
 blueprint:
+  source_url: 'https://raw.githubusercontent.com/thomasmauerer/hassio-addons/master/samba-backup/blueprints/restore_samba_backup_sensor.yaml'
   name: Restore Samba Backup sensor on startup
   description: Restore Samba Backup sensor on startup
   domain: automation
@@ -7,14 +8,16 @@ blueprint:
       name: Samba Backup Addon
       description: Select samba backup addon.
       selector:
-        addon: {}
-  source_url: https://github.com/thomasmauerer/hassio-addons/blob/master/samba-backup/blueprints/restore_samba_backup_sensor.yaml
+        addon:
+
 mode: single
+
 trigger:
-- event: start
-  platform: homeassistant
+  - event: start
+    platform: homeassistant
+
 action:
-- service: hassio.addon_stdin
-  data:
-    addon: !input addon
-    input: restore-sensor
+  - service: hassio.addon_stdin
+    data:
+      addon: !input addon
+      input: restore-sensor
